<resources>
    <string name="app_name">REAL ESTATE</string>
    <string name="name">Name</string>
    <string name="digite_seu_nome_completo">Type your full name</string>
    <string name="email_sign_up">Email</string>
    <string name="digite_seu_email">Type your email.</string>
    <string name="phone">Phone</string>
    <string name="password_sign_up">Password</string>
    <string name="genero">Gender</string>
    <string name="rdButtonMasculino">M</string>
    <string name="rdButtonFeminino">F</string>
    <string name="rdButtonNao">Don\'t specify</string>
    <string name="uf">States</string>
    <string name="concordo_com_os_termos_de_uso">Agree to the terms of use.</string>
    <string name="cadastrar_corretor">REGISTER REALTOR</string>
    <string name="cadastrar_imovel">REGISTER PROPERTY</string>
    <string name="local">Place</string>
    <string name="tipo_de_imovel">Type property</string>
    <string name="tipo_de_contrato">Type of contract</string>
    <string name="proprietario">Property</string>
    <string name="valor">Value</string>
    <string name="descricao">Description</string>
    <string name="telefone">Phone</string>
    <string name="numero">Nº</string>
    <string name="save_inf">Save</string>
    <string name="clean_button">Clear</string>
    <string name="titulo">Title</string>
    <string name="digite_um_titulo_para_o_anuncio_do_imovel">Enter a title for the property advertisement</string>
    <string name="digite_o_endereco">Type it address</string>
    <string name="nome_do_proprietario">Name property</string>
    <string name="EditText_descricao">Ex: House with 2 bedrooms, bathroom, living room, kitchen and laundry.</string>
    <string name="edittext_telefone">(DDD)99999-9999</string>
    <string name="number">Number</string>
    <string name="preco">$</string>
    <string name="apartamento">Apartment</string>
    <string name="casa">House</string>
    <string name="terreno">Ground</string>
    <string name="venda">Sale</string>
    <string name="aluguel">Rent</string>
    <string name="limpar">clear</string>
    <string name="cadastrar">Register</string>
    <string name="sobre">ABOUT</string>
    <string name="student_flavia_amorim_de_souza">Student: Flavia Amorim de Souza</string>
    <string name="aplicativo_voltado_para_a_realiza_o_de_cadastros_de_imoveis_e_corretores_com_o_objetivo_de_facilitar_o_controle_de_imoveis_e_colaboradores_de_uma_imobiliaria">Application aimed at making real estate registrations and brokers in order to facilitate the control of real estate and employees of a real estate company.</string>
    <string name="curso_tecnologia_java">Course: Tecnologia Java</string>
    <string name="lista_imoveis">LIST PROPERTY</string>
    <string name="lista_corretores">LIST REALTOR</string>
    <string name="cadastro_imovel">REGISTER PROPERTY</string>
    <string name="campos_limpos">Clean fields.</string>
    <string name="selecione_o_tipo_de_contrato">Select the type of contract.</string>
    <string name="selecione_o_tipo_de_imovel">Select the type of property</string>
    <string name="todos_os_campos_devem_ser_preenchidos">All fields must be filled!</string>
    <string name="CADASTRO_CORRETOR">REGISTER REALTOR</string>
    <string name="selecione_o_genero">Select the gender.</string>
    <string name="selecione_um_estado">Select a states!</string>
    <string name="email_invalido">Invalid email!</string>
    <string name="voce_deve_aceitar_os_termos_de_uso">You must accept the terms of use.</string>
    <string name="cadastro_efetuado_com_sucesso">Registration successfully Complete!</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="alterar">Change</string>
    <string name="deletar">Delete</string>
    <string name="salvar">Save</string>
    <string name="clear">Clear</string>
    <string name="adicionar">Add</string>
    <string name="sobre_menu">About</string>
    <string name="ABOUT">ABOUT</string>
    <string name="selecione">Select</string>
    <string name="atencao">Warning</string>
    <string name="tem_certeza_que_deseja_excluir_este_item">Are you sure you want to delete this item?</string>
    <string name="limpar_lista">Clear list</string>
    <string name="tem_certeza_que_deseja_limpar_a_lista">Are you sure you want to clear the list?</string>
    <string name="alterar_propriedade">Alter Property</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
</resources>